<resources>
    <string name="app_name">BeatsBear</string>
    <string name="main_all">All</string>
    <string name="main_relaxing">Relaxing</string>
    <string name="main_activating">Activating</string>

    <string name="songlist_activity_title">Playlist</string>
    <string name="title_activity_play">Play</string>
    <string name="playlist_bpm">BPM</string>
    <string name="playlist_song">Song</string>
    <string name="songlist_title">Add Song</string>

    <string name="song_default_title">Default title</string>
    <string name="song_tempo">Tempo</string>
    <string name="song_bpm">BPM</string>
    <string name="song_zero">0</string>
    <string name="song_album_art">Album Art</string>
    <string name="song_name">Song Name</string>
    <string name="song_artist">Song Artist</string>
    <string name="song_genre">Song Genre</string>
    <string name="song_match_pace">Match Pace</string>
</resources>
