<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.musicretrieval.beatsbear.Activities.PlayingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:text="@string/song_default_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_song_title"
            android:textAppearance="@android:style/TextAppearance.Large" />

        <ImageView
            android:id="@+id/play_song_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.00"
            app:srcCompat="@mipmap/ic_launcher"
            android:contentDescription="@string/song_album_art" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/play_manual_tempo">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/song_tempo"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/play_decrease_tempo_btn"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/ic_remove_black_24px" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/play_tempo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/song_bpm" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/play_increase_tempo_btn"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_centerHorizontal="true"
                            android:background="@drawable/ic_add_black_24px" />
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/play_pace_tempo"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/song_match_pace"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/play_tempo_pace"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="8dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/song_bpm" />

                </LinearLayout>
            </RelativeLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/play_manual_button"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center|fill"
                android:layout_weight="1"
                android:background="@drawable/button_bg_selected"
                android:text="Manual"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/play_pace_button"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_gravity="center|fill"
                android:layout_weight="1"
                android:background="@drawable/button_bg_not_selected"
                android:text="Match Pace"
                android:textColor="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/play_current_song_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/song_zero"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/play_current_song_total_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/song_zero"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <SeekBar
            style="@android:style/Widget.DeviceDefault.Light.SeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            android:progress="1"
            android:id="@+id/play_seek_bar" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/play_rewind_btn"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_skip_previous_black_24px" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/play_play_btn"
                    android:background="@drawable/ic_play_arrow_black_24px"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />

                <Button
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/play_pause_btn"
                    android:background="@drawable/ic_pause_black_24px"
                    android:visibility="gone"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <Button
                    android:id="@+id/play_forward_btn"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/ic_skip_next_black_24px" />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
